# his

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  UI_IMPROVEMENTS.md  install.ps1  install.sh
.github/workflows/: ci.yml  multi-platform-release.yml  portable-release.yml
build-win64/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
cmake/: mingw-w64-x86_64.cmake
data/: admissions.txt  beds.txt  departments.txt  dispense_records.txt  doctors.txt  examinations.txt  inpatient_orders.txt  medicines.txt  nursing_records.txt  patients.txt  prescriptions.txt  registrations.txt  round_records.txt  sequences.txt  users.txt  visits.txt  wards.txt
data/demo_seed/: admissions.txt  beds.txt  departments.txt  dispense_records.txt  doctors.txt  examinations.txt  inpatient_orders.txt  medicines.txt  patients.txt  prescriptions.txt  registrations.txt  round_records.txt  users.txt  visits.txt  wards.txt
docs/: AI_USAGE.md  BUILD_AND_RUN.md  FONT_LOADING.md  INSTALL.md  MACOS_ADAPTATION_SUMMARY.md  MACOS_FONT_FIX.md  MACOS_SECURITY.md  MACOS_SUPPORT.md  PROJECT_FLOWCHART.md  RELEASE_GUIDE.md
docs/superpowers/plans/: 2026-03-20-lightweight-his.md  2026-03-21-auth-and-dispense-ownership.md  2026-03-21-desktop-business-pages.md  2026-03-21-desktop-control-panel.md  2026-03-21-first-round-security-hardening.md  2026-03-22-desktop-frontend-completion.md  2026-03-22-phase-one-patient-workbench.md  2026-03-23-role-isolated-workbench-implementation.md  2026-03-27-specialized-role-integrated-his-workbench-implementation.md  2026-03-29-streaming-summary-layer-implementation.md  2026-03-30-readme-user-guide-implementation.md  2026-03-31-demo-data-selector-implementation.md  2026-04-08-opencode-tui-redesign.md
docs/superpowers/specs/: 2026-03-20-lightweight-his-design.md  2026-03-21-desktop-control-panel-design.md  2026-03-22-patient-first-medical-desktop-workbench-design.md  2026-03-23-role-isolated-workbench-design.md  (+4 more)
include/common/: IdGenerator.h  InputHelper.h  LinkedList.h  Result.h  StringUtils.h  UpdateChecker.h
include/domain/: Admission.h  Bed.h  Department.h  DispenseRecord.h  Doctor.h  DomainTypes.h  ExaminationRecord.h  InpatientOrder.h  Medicine.h  NursingRecord.h  Patient.h  Prescription.h  Registration.h  RoundRecord.h  User.h  VisitRecord.h  Ward.h
include/repository/: AdmissionRepository.h  BedRepository.h  DepartmentRepository.h  DispenseRecordRepository.h  DoctorRepository.h  ExaminationRecordRepository.h  InpatientOrderRepository.h  MedicineRepository.h  NursingRecordRepository.h  PatientRepository.h  PrescriptionRepository.h  RegistrationRepository.h  RepositoryUtils.h  RoundRecordRepository.h  TextFileRepository.h  UserRepository.h  VisitRecordRepository.h  WardRepository.h
include/service/: AuditService.h  AuthService.h  AuthServiceTestHooks.h  BedService.h  DepartmentService.h  DoctorService.h  InpatientOrderService.h  InpatientService.h  MedicalRecordService.h  NursingRecordService.h  PatientService.h  PharmacyService.h  PrescriptionService.h  RegistrationService.h  RoundRecordService.h  SequenceService.h
include/ui/: AdminWorkbenchSupport.h  DemoData.h  DesktopAdapters.h  DesktopApp.h  DesktopPages.h  DesktopTheme.h  MenuActionHandlers.h  MenuApplication.h  MenuController.h  TuiPanel.h  TuiStyle.h  Workbench.h
release/his-desktop-v2.0.4-macos-arm64/: README.md  his_desktop
scripts/: package-release-linux.sh  package-release-macos.sh  package-release.ps1  setup-macos.sh  sync-desktop-glyph-seed.py  test-font-loading.sh  test-fonts.sh  test-package-release-macos.sh  update.ps1  update.sh
src/: main.c
src/common/: IdGenerator.c  InputHelper.c  LinkedList.c  Result.c  StringUtils.c  UpdateChecker.c
src/desktop/: main.c
src/domain/: Admission.c  Bed.c  DispenseRecord.c  ExaminationRecord.c  InpatientOrder.c  Registration.c  VisitRecord.c  Ward.c
src/repository/: AdmissionRepository.c  BedRepository.c  DepartmentRepository.c  DispenseRecordRepository.c  DoctorRepository.c  ExaminationRecordRepository.c  InpatientOrderRepository.c  MedicineRepository.c  NursingRecordRepository.c  PatientRepository.c  PrescriptionRepository.c  RegistrationRepository.c  RepositoryUtils.c  RoundRecordRepository.c  TextFileRepository.c  UserRepository.c  VisitRecordRepository.c  WardRepository.c
src/service/: AuditService.c  AuthService.c  BedService.c  DepartmentService.c  DoctorService.c  InpatientOrderService.c  InpatientService.c  MedicalRecordService.c  NursingRecordService.c  PatientService.c  PharmacyService.c  PrescriptionService.c  RegistrationService.c  RoundRecordService.c  SequenceService.c
src/ui/: DemoData.c  DesktopAdapters.c  DesktopApp.c  DesktopGlyphSeed.h  DesktopPages.c  DesktopTheme.c  MenuActionAdmin.c  MenuActionDoctor.c  MenuActionInpatient.c  MenuActionPatient.c  MenuActionPharmacy.c  MenuApplication.c  MenuController.c  TuiPanel.c  TuiStyle.c  WorkbenchCommon.c
tests/: test_admin_workbench_support.c  test_admission.c  test_audit_service.c  test_auth_service.c  test_bed_service.c  test_clerk_workbench_flow.c  test_common.c  test_demo_data_integrity.c  test_department_service.c  test_desktop_adapters.c  test_desktop_layout_rules.c  test_desktop_state.c  test_desktop_workflows.c  test_doctor_repository.c  test_doctor_service.c  test_doctor_workbench_flow.c  test_domain.c  test_inpatient_domain.c  test_inpatient_order_service.c  test_inpatient_service.c  test_inpatient_ward_workbench_flow.c  test_medical_record_service.c  test_menu_application.c  test_menu_controller.c  test_nursing_record_service.c  test_patient_repository.c  test_patient_service.c  test_patient_workbench_flow.c  test_pharmacy_admin_workbench_flow.c  test_pharmacy_service.c  test_prescription_service.c  test_registration_repository.c  test_registration_service.c  test_repository_utils.c  test_result.c  test_round_record_service.c  test_sequence_service.c  test_text_file_repository.c  test_tui_style.c  test_ward.c
tools/: regen_user_fixture.c
(+12 files in other folders)
